@@ -25,3 +25,4 @@ require 'active_merchant/billing/gateways/secure_pay'
 require 'active_merchant/billing/gateways/trans_first'
 require 'active_merchant/billing/gateways/verifi'
 require 'active_merchant/billing/gateways/plugnpay'
+require 'active_merchant/billing/gateways/protx'
